coverage_output.txt
[1m============================= test session starts ==============================[0m
platform linux -- Python 3.13.11, pytest-9.0.2, pluggy-1.6.0
rootdir: /home/allaun/Workspace/NoDupeLabs
configfile: pyproject.toml
testpaths: tests
plugins: cov-7.0.0, anyio-4.12.0
collected 874 items / 4 errors

==================================== ERRORS ====================================
[31m[1m______________ ERROR collecting tests/core/test_database_files.py ______________[0m
[31mImportError while importing test module '/home/allaun/Workspace/NoDupeLabs/tests/core/test_database_files.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/core/test_database_files.py:13: in <module>
    from nodupe.core.database.files import FileRecordManager
E   ImportError: cannot import name 'FileRecordManager' from 'nodupe.core.database.files' (/home/allaun/Workspace/NoDupeLabs/nodupe/core/database/files.py)[0m
[31m[1m__________________ ERROR collecting tests/core/test_hasher.py __________________[0m
[31m../../.local/lib/python3.13/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
../../.local/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../../.local/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../../.local/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.13/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/home/allaun/Workspace/NoDupeLabs/tests/core/test_hasher.py", line 164
E       binary_content = b'\x0\x01\x02\x03\xFF\xFE' * 1000  # Binary content
E                        ^^^^^^^^^^^^^^^^^^^^^^^^^^
E   SyntaxError: (value error) invalid \x escape at position 0[0m
[31m[1m_____________ ERROR collecting tests/core/test_progress_tracker.py _____________[0m
[31mImportError while importing test module '/home/allaun/Workspace/NoDupeLabs/tests/core/test_progress_tracker.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/core/test_progress_tracker.py:6: in <module>
    from nodupe.core.progress_tracker import ProgressTracker
E   ModuleNotFoundError: No module named 'nodupe.core.progress_tracker'[0m
[31m[1m_______________ ERROR collecting tests/plugins/test_leap_year.py _______________[0m
[31mImportError while importing test module '/home/allaun/Workspace/NoDupeLabs/tests/plugins/test_leap_year.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/plugins/test_leap_year.py:14: in <module>
    from nodupe.plugins.leap_year import LeapYearPlugin
nodupe/plugins/leap_year/__init__.py:25: in <module>
    from .leap_year import LeapYearPlugin
nodupe/plugins/leap_year/leap_year.py:30: in <module>
    from nodupe.core.plugin_system import PluginBase, PluginMetadata
E   ImportError: cannot import name 'PluginBase' from 'nodupe.core.plugin_system' (/home/allaun/Workspace/NoDupeLabs/nodupe/core/plugin_system/__init__.py)[0m
---- generated xml file: /home/allaun/Workspace/NoDupeLabs/test_results.xml ----
[36m[1m=========================== short test summary info ============================[0m
[31mERROR[0m tests/core/test_database_files.py
[31mERROR[0m tests/core/test_hasher.py
[31mERROR[0m tests/core/test_progress_tracker.py
[31mERROR[0m tests/plugins/test_leap_year.py
!!!!!!!!!!!!!!!!!!! Interrupted: 4 errors during collection !!!!!!!!!!!!!!!!!!!!
[31m============================== [31m[1m4 errors[0m[31m in 1.14s[0m[31m ===============================[0m
